; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_canal.c_stringAt.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_canal.c_stringAt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i64)* @stringAt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stringAt(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca [32 x i64], align 16
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i64, i64* %5, align 8
  %11 = sub nsw i64 %10, 1
  %12 = getelementptr inbounds [32 x i64], [32 x i64]* %6, i64 0, i64 0
  %13 = call i32 @r_io_read_at(i32 %9, i64 %11, i64* %12, i32 256)
  %14 = getelementptr inbounds [32 x i64], [32 x i64]* %6, i64 0, i64 0
  %15 = load i64, i64* %14, align 16
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

18:                                               ; preds = %2
  %19 = getelementptr inbounds [32 x i64], [32 x i64]* %6, i64 0, i64 0
  %20 = getelementptr inbounds i64, i64* %19, i64 1
  %21 = call i32 @is_string(i64* %20, i32 31, i32* null)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %17
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @r_io_read_at(i32, i64, i64*, i32) #1

declare dso_local i32 @is_string(i64*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
